<resources>
    <string name="app_name">Library</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_pages">Enter pages</string>
    <string name="add">Add</string>
    <string name="enter_author">Enter author</string>
    <string name="welcome_to_the_online_book_library_here_you_can_publish_a_book_which_you_have_read">Welcome to the online book Library.Here you can publish a book which you have read.</string>
    <string name="_3_click_the_button_add">3.Click the button ADD.</string>
    <string name="_1_open_the_system_to_add_a_book_with_sign">1.Open the system to add a book with sign \'+\'.</string>
    <string name="go_to_the_book_library">Go to the book library</string>
    <string name="_2_you_will_see_fields_fill_them">2.You will see fields fill them.</string>
    <string name="instructions">Instructions</string>
    <string name="https_library_com">https://library.com</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="library">Library</string>
</resources>